      rid of the majority of places where COMB, OBSE, STEA, and TACT were
      used raw in the code!
   -- Cleaned up NotifySpell so it's generic.
   -- Items now have a max_inventory value.  This lets us ensure no more than
      one balrog per unit nicely, and we can limit arbitrary items if we want.
   -- The monster escape code is now much more generic.  Still not 100% great
      but better than it was!
   -- Lots of uses of I_LEADER replaced with a type flag IT_LEADER.  There
      are still some, but the groundwork for multiple leader races is getting
      there.
   -- Changed USE_PREPARE slightly.  There is now a 'strict' and a 'normal'
      setting for USE_PREPARE.  Under strict, the READY command MUST be
      used or the unit will not use any battle items.  Under normal, the
      unit will fall back on the battle items list.
   -- gamedefs OCEAN and CONTINENT_SIZE now determine surface level parameters.
   -- Fixed a bug which caused the first mage casting Earth Lore in a
      region to recieve 2*level less silver than he should.
   -- Fixed a bug where an army where all casualties were healed were
      prevented from further moves or attacks.  Full healing should mean
      no penalties.
   -- Fixed a bug in output of rules dealing with skill-based maintenance.
   -- Fixed a bug dealing with the cost of non-skilled units versus skilled
      units when in a maintenance mode which requires skill based upkeep.
      Units will now pay the maximum of the skill based upkeep or the normal
      upkeep.  This means that GM's should probably *lower* the normal upkeep
      to something more reasonable than 10/20 if they are using the skill
      based upkeep unless they JUST want to penalize higher skilled leaders.
   -- Fixed bug where completed buildings weren't providing combat protection.
   -- Add some additional information to battle reports to help out the
      author of atlaclient.