@@ -79,7 +79,7 @@ int RunSummonDemon(ARegion *,Unit *);
 int RunSummonBalrog(ARegion *,Unit *);
 int RunCreateArtifact(ARegion *,Unit *,int,int);
 int RunEngraveRunes(ARegion *,Object *,Unit *);
-int RunConstructGate(ARegion *,Unit *);
+int RunConstructGate(ARegion *,Unit *,int);
 int RunEnchantSwords(ARegion *,Unit *);
 int RunEnchantArmor(ARegion *,Unit *);
 int RunMindReading(ARegion *,Unit *);
