@@ -253,6 +253,7 @@ class Unit : public AListElem
 		/* Orders */
 		int destroy;
 		int enter;
+		Object *build;
 		int leftShip;
 		UnitId *promote;
 		AList findorders;
